
  * New upstream release.
  * move duecredit to the Debian Python Team
    - add Drew Parsons as Uploader
    - git repo created using gbp import-dsc from .dsc files
      at http://snapshot.debian.org/package/duecredit/
    - update debian/gbp.conf
  * update debian/watch to version 4 @ANY_VERSION@@ARCHIVE_EXT@
  * drop debian patches (applied upstream)

 -- Drew Parsons <dparsons@debian.org>  Tue, 09 Jul 2024 12:14:52 +0200

duecredit (0.9.1-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * debian patch fix_version_PR184.patch applies upstream PR#184 to
    fix package version. Closes: #1030408.

 -- Drew Parsons <dparsons@debian.org>  Sun, 19 Feb 2023 11:09:20 +0100

duecredit (0.9.1-1) unstable; urgency=medium

  * Most recent upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 30 Mar 2022 09:35:52 -0400

duecredit (0.8.0-1) unstable; urgency=medium

  * Most recent upstream release (Closes: #970895)

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 25 Sep 2020 20:08:29 -0400

duecredit (0.7.0-3) unstable; urgency=medium

  * Completely remove mentioining of python2 in debian/rules
    (Closes: #936450)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 18 Dec 2019 22:21:04 -0500

duecredit (0.7.0-2) unstable; urgency=medium

  * Drop python2 support (was intended to close #936450)

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 10 Dec 2019 23:18:30 -0500

duecredit (0.7.0-1) experimental; urgency=medium

  * Fresh upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 01 Mar 2019 13:10:33 -0500

duecredit (0.6.5-1) unstable; urgency=medium

  * Fresh upstream release
    - should be faster to import now and avoid some import issues

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 04 Feb 2019 12:51:06 -0500

duecredit (0.6.4-1) unstable; urgency=medium

  * Fresh upstream release
  * debian/control
    - upstream uses pytest now instead of nose
  * debian/patches