@@ -4,7 +4,8 @@ export DH_VERBOSE=1
 
 export PYBUILD_NAME=duecredit
 export PYBUILD_AFTER_INSTALL_python3=rm -rf {destdir}/usr/bin/
-#export PYBUILD_TEST_ARGS=-e 'test_(import_doi|noincorrect_import_if_no_lxml_numpy)'
+
+PYVER = $(shell py3versions -sv)
 
 export LC_ALL=C.UTF-8
 # there is still some race condition somewhere so injection test on a fast system
@@ -18,3 +19,10 @@ override_dh_clean:
 	dh_clean
 	-rm duecredit/version.py  # autogenerated
 
+# tests must be run from topdir
+# else a citeproc error is triggered from build_dir
+override_dh_auto_test:
+	for py in $(PYVER); do \
+	  PYTHONPATH=`pybuild -p $$py --print {build_dir}` \
+	  python$$py -mpytest; \
+	done
